[package]
name = "project_peace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10"
base64 = "0.20"
flate2 = "1.0"
log = "0.4"
pbkdf2 = "0.11"
rand = "0.8"
rpassword = "7.2"
rsa = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
walkdir = "2"